--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,6 +2,9 @@
   <header class="header">
       <h1>todos</h1>
   </header>
+  <form id="new-form">
+      <input type="text" class="new-todo" />
+  </form>
   <section class="main">
     <ul class="todo-list">
       
@@ -13,6 +16,11 @@
 
 <script type="text/javascript">
   $(function() {
+    $('#new-form').submit(function(event) {
+      event.preventDefault();
+      var textBox = $('.new-todo');
+      console.log("Task: ", textBox.val());
+    });
     
     // The taskHtml method takes in a javascript representation of the task
     // and produces an HTML representation using <li> tags
