--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -19,7 +19,16 @@
     $('#new-form').submit(function(event) {
       event.preventDefault();
       var textBox = $('.new-todo');
-      console.log("Task: ", textBox.val());
+    
+      var payload = {
+        task: {
+          title: textBox.val()
+          }
+        };
+
+      $.post("/tasks/", payload).success(function(data) {
+        console.log("Successful HTTP Request");
+      });
     });
     
     // The taskHtml method takes in a javascript representation of the task
