added ability to add ttask with refresh

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -16,20 +16,7 @@
 
 <script type="text/javascript">
   $(function() {
-    $('#new-form').submit(function(event) {
-      event.preventDefault();
-      var textBox = $('.new-todo');
     
-      var payload = {
-        task: {
-          title: textBox.val()
-          }
-        };
-
-      $.post("/tasks/", payload).success(function(data) {
-        console.log("Successful HTTP Request");
-      });
-    });
     
     // The taskHtml method takes in a javascript representation of the task
     // and produces an HTML representation using <li> tags
@@ -68,6 +55,24 @@
       ulTodos.html(htmlString);
       
       $('.toggle').change(toggleTask);
+    });
+    
+    $('#new-form').submit(function(event) {
+      event.preventDefault();
+      var textBox = $('.new-todo');
+    
+      var payload = {
+        task: {
+          title: textBox.val()
+          }
+        };
+
+      $.post("/tasks", payload).success(function(data) {
+        var htmlString = taskHtml(data);
+        var ulTodos = $('.todo-list');
+        ulTodos.append(htmlString);
+        $('.toggle').click(toggleTask);
+      });
     });
   });
 </script>
